Small fix so ActiveAdmin fields don't break on Zoom levels above 33%

--- a/api/app/assets/stylesheets/active_admin.scss
+++ b/api/app/assets/stylesheets/active_admin.scss
@@ -40,6 +40,9 @@
 
 // Active Admin's got SASS!
 @import "active_admin/mixins";
+
+$text-input-total-padding: $text-input-total-padding + 2px;
+
 @import "active_admin/base";
 
 // Overriding any non-variable SASS must be done after the fact.
